--- a/assignment/package.json
+++ b/assignment/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "main": "dist/index.js",
   "scripts": {
+    "format": "prettier --write assignment-1.ts",
     "test": "npm run mocha && tsc --noEmit",
     "clean": "rimraf dist",
     "build": "rimraf dist && tsc -p . && rimraf dist/tsconfig.tsbuildinfo",
@@ -19,6 +20,7 @@
     "@types/node": "^22.13.1",
     "chai": "4",
     "mocha": "^10.8.2",
+    "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
